--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "axios": "^1.7.5",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "react": "^18",
