--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
+    "@lottiefiles/dotlottie-react": "^0.8.9",
     "@mui/material": "^5.16.7",
     "axios": "^1.7.5",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18"
   },
   "devDependencies": {
